indentation, factor out limitCors